# Versich-Treue

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  template.py  test.py
.github/workflows/: cicd.yaml
config/: model.yaml  schema.yaml
notebooks/: experiments.ipynb  mongoDB_test.ipynb
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_deployment.py  model_evaluation.py  model_training.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: vt_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: index.html
